fix: :bug: Fix img alignment

--- a/v3/css/app.css
+++ b/v3/css/app.css
@@ -1315,4 +1315,7 @@ h6 {
             margin-left: unset;
             margin-top: 15px;
         }
+                                                #get-started-hero {
+                            background-position: 60%;
+                        }
     }
